Removed position absolute from top p class to fix spacing issues.

--- a/src/Profile.css
+++ b/src/Profile.css
@@ -70,7 +70,7 @@ button:hover {
 /* Mobile View */
 @media only screen and (max-width: 600px) {
   button {
-    display: inline;
+    display: inline-block;
     padding-bottom: 10px;
   }
 
@@ -79,7 +79,12 @@ button:hover {
   }
 
   .top p {
-    position: absolute;
     top: 170px;
+  }
+
+  .top .name {
+    font-size: 25px;
+    bottom: -30px;
+    padding-bottom: 0;
   }
 }
